# ai-test

./: .gitignore  readme.md
app/: 3d_model_1749252394.glb  chainlit.md  chainlit_gui.py  gradio_gui.py  gui.py  ignite.py  image_to_3d_pipeline.py  main.py  minimal_gui.py  pyproject.toml  requirements.txt  schema.py  start.sh  test.py
app/config/: manifest.json
app/core/: remote.py  stub.py
app/datastore/: state.json
app/downloads/: generated_model_1749253553.glb  generated_model_1749253630.glb  generated_model_1749253889.glb  generated_model_1749254287.glb
app/memory/: __init__.py  ai_memory.db  conversation_tracker.py  generations.db  memory.db  memory_manager.py  semantic_search.py
app/ontology_dc8f06af066e4a7880a5938933236037/: config.py  input.py  output.py
app/outputs/: image_1abc1570.txt  image_2664d273.txt  image_279255bc.txt  image_492a8ce2.txt  image_575691ad.txt  image_d479bd15.txt  model_0f853edf.glb  model_1d22735d.glb  model_2163fb4f.txt  model_270a9ac8.txt  model_dabb9fb6.txt
