[tool.poetry]
name = "core"
version = "1.0"
description = "An application for demonstrating your skills in AI"
authors = ["Rockstar"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openfabric-pysdk = "^0.2.9"
marshmallow = "<4.0"
transformers = "^4.52.4"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "node2"
url = "https://repo.node2.openfabric.network/index"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
