[tool.poetry]
name = "core"
version = "1.0"
description = "An application for demonstrating your skills in AI"
authors = ["Rockstar"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# Core Openfabric SDK
openfabric-pysdk = "^0.2.9"
marshmallow = "<4.0"

# Deep Learning and LLM Support
torch = "^2.0.0"
transformers = "^4.52.4"
accelerate = "^0.20.0"
bitsandbytes = "^0.41.0"

# Local LLM Integration
ollama = "^0.1.0"

# Data Processing and Utilities
numpy = "^1.24.0"
pillow = "^9.5.0"
requests = "^2.31.0"

# Database and Storage
redis = { version = "^4.5.0", optional = true }

# Environment and Configuration
python-dotenv = "^1.0.0"

# Type Validation and Utilities
pydantic = "^2.0.0"
typing-extensions = "^4.5.0"

# UUID and JSON (built-in but explicit for clarity)
uuid = { version = "*", python = ">=3.9" }

# Optional GUI Dependencies
# streamlit = { version = "1.18.0", optional = true } (==Compatability Issue==)
gradio = { version = "^3.50.0" }

# Advanced Memory Features (Bonus)
faiss-cpu = { version = "^1.7.4", optional = true }
chromadb = { version = "^0.4.0", optional = true }

[tool.poetry.extras]
gui = ["streamlit", "gradio"]
memory = ["redis", "faiss-cpu", "chromadb"]
all = ["streamlit", "gradio", "redis", "faiss-cpu", "chromadb"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[[tool.poetry.source]]
name = "node2"
url = "https://repo.node2.openfabric.network/index"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]